bug fixes + clean up